Add auth sessions and redesign login flow
